--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "vite-project",
+  "name": "hw01-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "React homeworks for SDC. HW #1: Vite + class component list",
+  "author": "23-LR Mastykina",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
