--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.1",
     "firebase": "^12.6.0",
+    "i18next": "^25.7.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6"
   },
